<resources>
    <string name="app_name">CoffeeChat!</string>
    <string name="registrationPasswordHint">Password</string>
    <string name="registrationConfirmPasswordHint">Confirm password</string>
    <string name="registrationUserNameHint">Username</string>
    <string name="registrationEmailHint">E-mail</string>
    <string name="buttonRegistrationText">Register</string>
    <string name="buttonCancelText">Cancel</string>
    <string name="buttonLoginText">Log In</string>
    <string name="buttonGoToRegistrationText">Not a member? Please, register!</string>
    <string name="backToLoginButtonText">Already a member? Please, log in!</string>
    <string name="LoginPasswordHint">Password</string>
    <string name="loginTextHint">E-mail</string>
    <string name="appLogoDescription">app_logo_coffee_mug</string>
    <string name="appTitleString">CoffeeChat!</string>
    <string name="logOutButton">Log out</string>
    <string name="usernameLabelString">%1$s</string>
    <string name="usernameHint">latte_avocado</string>
    <string name="usernameChooseText">Choose your username!</string>
    <string name="buttonForwardText">Forward</string>
    <string name="welcomeString">Welcome!</string>
    <string name="chatlistHint">This is the chatlist</string>
    <string name="startNewChat">Start a new chat.</string>
    <string name="userSettingsIcon">User settings</string>
    <string name="chatListDescription">This is the chatlist itself.</string>
    <string name="profilePictureLabel">Choose your profile picture!</string>
    <string name="cameraIconDescription">Create a new photo.</string>
    <string name="galleryIconDescription">Choose a profile picture from your gallery.</string>
    <string name="backToChatListIconDescription">Return to the chat list</string>
    <string name="changeProfilePictureString">Change your profile picture</string>
    <string name="settingsLabelString">Settings</string>
    <string name="changeEmailHint">New e-mail</string>
    <string name="changeUsernameString">Loading username…</string>
    <string name="friendsIconDescription">Friends icon.</string>
    <string name="deleteButtonString">Delete</string>
    <string name="confirmDeletionTitleString">Confirm Deletion</string>
    <string name="confirmDeletionMessageString">Are you sure you want to delete your account? This action cannot be undone.</string>
    <string name="changeString">change</string>
    <string name="changePasswordTitleString">Change password:</string>
    <string name="changePasswordOldEditTextHint">Old password</string>
    <string name="changeEmailTitleString">Change e-mail:</string>
    <string name="changePasswordEditTextHint">New password</string>
    <string name="changeUsernameTitle">Change username:</string>
    <string name="changeEmailOldEditTextHint">Old e-mail</string>
    <string name="changeEmailDialogMessageString">We well send a confirmation link to your new e-mail address! After you click on the link, you will be signed out.</string>
    <string name="peopleString">People</string>
    <string name="peopleRecyclerViewDescription">Here you can see all the people that are available to chat.</string>
    <string name="findPeopleEditTextHint">Find people to chat with…</string>
    <string name="chatListIconDescription">Back to the chatlist</string>
    <string name="chatInputHint">Message</string>
    <string name="sendMessageIconDescription">Send message</string>
</resources>