<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/dirty_white"
    android:padding="24dp">

    <TextView
        android:id="@+id/changeEmailTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/changeEmailTitleString"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/changeEmailDialogMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/changeEmailDialogMessageString"
        android:textColor="@android:color/black"
        android:layout_marginBottom="12dp" />

    <EditText
        android:id="@+id/changeEmailEditText"
        style="@style/editTextCoffee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/changeEmailHint"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/changeEmailPasswordEditText"
        style="@style/editTextCoffee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/LoginPasswordHint"
        android:inputType="textPassword"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginTop="12dp">

        <Button
            android:id="@+id/changeEmailCancelButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonCancelText"
            android:layout_marginEnd="15dp"
            android:backgroundTint="@color/coffeeBrown"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/changeEmailButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/changeString"
            android:backgroundTint="@color/coffeeBrown"
            android:textColor="@android:color/white" />
    </LinearLayout>

</LinearLayout>