<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/dirty_white"
    android:padding="24dp">

    <TextView
        android:id="@+id/deletionDialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmDeletionTitleString"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/deletionDialogMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmDeletionMessageString"
        android:textColor="@android:color/black"
        android:layout_marginBottom="12dp" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginTop="8dp">

        <Button
            android:id="@+id/accountDeletionCancelButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonCancelText"
            android:layout_marginEnd="15dp"
            android:backgroundTint="@color/coffeeBrown"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/accountDeleteButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deleteButtonString"
            android:backgroundTint="@color/coffeeBrown"
            android:textColor="@android:color/white" />
    </LinearLayout>
</LinearLayout>