<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/dirty_white"
    android:padding="24dp">

    <TextView
        android:id="@+id/changeUsernameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/changeUsernameTitle"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_marginBottom="8dp" />



    <EditText
        android:id="@+id/changeUsernameEditText"
        style="@style/editTextCoffee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/changeUsernameString"
        android:inputType="text"
        android:minHeight="48dp" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginTop="12dp">

        <Button
            android:id="@+id/changeUsernameCancelButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonCancelText"
            android:layout_marginEnd="15dp"
            android:backgroundTint="@color/coffeeBrown"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/changeUsernameButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/changeString"
            android:backgroundTint="@color/coffeeBrown"
            android:textColor="@android:color/white" />
    </LinearLayout>

</LinearLayout>