<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/dirty_white"
    android:padding="24dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/changeAvatarImageView"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:scaleType="centerCrop"
        android:src="@drawable/coffee_default_avatar"
        app:shapeAppearanceOverlay="@style/CircleImageView"
        app:strokeColor="@color/black"
        app:strokeWidth="1.8dp" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="12dp">

        <ImageView
            android:id="@+id/changeAvatarCameraIcon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/cameraIconDescription"
            android:scaleType="fitCenter"
            android:src="@drawable/camera"/>

        <ImageView
            android:id="@+id/changeAvatarGalleryIcon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/galleryIconDescription"
            android:scaleType="fitCenter"
            android:src="@drawable/folder" />


    </LinearLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="15dp">

        <Button
            android:id="@+id/changeAvatarCancelButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonCancelText"
            android:layout_marginEnd="15dp"
            android:backgroundTint="@color/coffeeBrown"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/changeAvatarButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/changeString"
            android:backgroundTint="@color/coffeeBrown"
            android:textColor="@android:color/white" />
    </LinearLayout>

</LinearLayout>