<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/setProfilePictureMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".SetProfilePictureActivity">

        <TextView
            android:id="@+id/appLogoLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/coffee_town"
            android:text="@string/appTitleString"
            android:textColor="@color/coffeeBrown"
            android:textSize="55sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/profilePictureLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/profilePictureLabel"
            android:textColor="@color/coffeeBrown"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/avatarImageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:padding="5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/coffee_default_avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profilePictureLabel"
            app:shapeAppearanceOverlay="@style/CircleImageView"
            app:strokeColor="@color/coffeeBrown"
            app:strokeWidth="1.8dp" />

        <GridLayout
            android:id="@+id/profilePictureButtonGrid"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:columnCount="2"
            app:layout_constraintTop_toBottomOf="@+id/avatarImageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/cameraIcon"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_column="0"
                android:layout_gravity="start"
                android:layout_columnWeight="1"
                android:contentDescription="@string/cameraIconDescription"
                android:onClick="openCameraOnClick"
                android:scaleType="fitCenter"
                android:src="@drawable/camera"
                app:tint="@color/coffeeBrown" />

            <ImageView
                android:id="@+id/galleryIcon"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_column="1"
                android:layout_gravity="end"
                android:layout_columnWeight="1"
                android:contentDescription="@string/galleryIconDescription"
                android:onClick="openGalleryOnClick"
                android:scaleType="fitCenter"
                android:src="@drawable/folder"
                app:tint="@color/coffeeBrown" />
        </GridLayout>

        <Button
            android:id="@+id/forwardButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/coffeeBrown"
            android:text="@string/buttonForwardText"
            android:onClick="forwardButtonOnClick"
            tools:ignore="VisualLintButtonSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profilePictureButtonGrid" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
